tdf#113183 DOCX import: fix not independent text box alignments

The alternative would be to clear them in
writerfilter::dmapper::DomainMapper::getPositionOffset(), but that runs
before writerfilter::dmapper::PositionHandler::lcl_sprm(), so it would
be too early.

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport11.cxx

(cherry picked from commit 312cecf11c1ab8acef6ce08ccb90d5322836b08f)

Change-Id: I287b9a4025c4b1844ae467c48815b5d7ffe3f98e
Reviewed-on: https://gerrit.libreoffice.org/46322
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>